--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -68,12 +68,12 @@
         .canDoElementWrap{
           color: $light;
           width: 370px;
-          margin-left: 5vw;
-          margin-right: 5vw;
+
           height: auto;
                     img{
                       width: auto;
                       height: 22vh;
+
                       -moz-user-select: none;
                       -webkit-user-select: none;
                       user-select: none;
@@ -130,7 +130,7 @@
           min-width: 150px;
           height: 12vh;
           margin-top: -17%;
-          color: $dark;
+          color: #565F47;
         }
         a{
           width: auto;
@@ -187,14 +187,14 @@
     display: flex;
     flex-direction: column;
 
-
+    justify-content: center;
     align-items: center;
 
     .rack_header{
       font-size: 55px;
       color: $gd;
       font-family: tiemposM;
-      margin-top: 100px;
+
 
     }
     .rack_subText{
@@ -215,6 +215,7 @@
           img{
             height: auto;
             width: 15vw;
+            min-width: 200px;
 
           }
         }
@@ -497,10 +498,10 @@
       font-family: tiemposM;
     }
     .loanText{
-      font-size: 25px;
+      font-size: 22px;
       width: 900px;
       text-align: center;
-      color: $dark;
+      color: #565F47;
     }
   }
   .loanMargin{
@@ -580,8 +581,8 @@
         }
         .feesTextb2{
           font-size: 20px;
-          line-height: 30px;
-          text-align:center;
+          line-height: 40px;
+          text-align:left;
           color: #F5F4F1;
           width: 45vw;
           background-color: #231F20;
@@ -625,7 +626,7 @@
 .arms-grid{
   display: grid;
   grid-template-columns: 50% 10% 40%;
-  grid-template-rows: 52vh 48vh 6vh 58vh 83vh 43vh 58vh;
+  grid-template-rows: 52vh 48vh 6vh 45vh 83vh 43vh 58vh;
   grid-template-areas:
     "faimg faimg faimg"
     "fainfo fainfo fainfo"
@@ -667,12 +668,12 @@
       justify-content: center;
       align-items: center;
         .faImgTxtContent{
-          margin-left: -100px;
+          margin-left: -2vw;
 
           h1{
             color: $gd;
             font-size: 45px;
-            width: 800px;
+            width: 45vw;
             margin-bottom: 20px;
           }
           .faImgTxtList{
@@ -680,7 +681,7 @@
 
             hr{
               border-color: $gd;
-              width: 35%;
+              width: 300px;
             }
           }
         }
@@ -699,6 +700,7 @@
       grid-area: safeimg;
       height: 100%;
       width: 100%;
+      overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -745,6 +747,7 @@
       align-items: center;
       justify-content: center;
       h1{
+        padding-top: 20px;
         font-size: 45px;
         width: 80%;
         text-align: center;
@@ -752,6 +755,7 @@
         font-family: tiemposR;
       }
       img{
+        padding-top: 30px;
         height: auto;
         width: 5%;
       }
@@ -766,6 +770,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+
       .faBottomContent{
         display: flex;
         align-items: center;
@@ -783,6 +788,7 @@
 
         }
         .faBottomLinks{
+          width: 30%;
           margin-left: 20px;
           a{
             color: $light;
@@ -823,7 +829,7 @@
       .scroll-container{
         position: absolute;
         text-align: center;
-        z-index: 1000;
+        z-index: 1;
         left: 50%;
         transform: translate(-50%, -150%);
         padding-bottom: 10px;
@@ -1047,7 +1053,7 @@ header{
          position: absolute;
          background-color: #F5F4F1;
          min-width: 160px;
-
+         padding-top: 20px;
          z-index: 1;
 
 
@@ -1438,7 +1444,7 @@ footer {
     border-style: solid;
   border-radius: 6px;
     border-width: 1px;
-    border-color: #767615;
+    border-color: #565F47;
 
 
     transition: right 0.5s;
@@ -1479,9 +1485,9 @@ footer {
       margin-left: 8px;
       margin-top: 8px;
       border-style: solid;
-      border-radius: 1px;
+        border-radius: 6px;
       border-width: 1px;
-      border-color: #767615;
+      border-color: $gd;
       .side_contact{
         margin-left: 10px;
         margin-top: 8px;
